--- a/src/main/webapp/tilda.html
+++ b/src/main/webapp/tilda.html
@@ -1,7 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-         pageEncoding="UTF-8" %>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-
 <html>
 <head>
     <meta charset="utf-8">
@@ -134,42 +130,44 @@
                                     the flight
                                 </div>
                                 <div>
-                                    <form action="index" method="POST">
-
+                                    <form id="form158142307" name="form158142307" role="form" action="" method="POST"
+                                          data-formactiontype="0" data-inputbox=".t-input-group"
+                                          class="t-form js-form-proccess t-form_inputs-total_4 "
+                                          data-success-callback="t698_onSuccess"> <!-- NO ONE SERVICES CONNECTED -->
                                         <div class="js-successbox t-form__successbox t-text t-text_md"
                                              style="display:none;"></div>
                                         <div class="t-form__inputsbox">
                                             <div class="t-input-group t-input-group_em" data-input-lid="1495646533382">
-                                                <div class="t-input-block"><input type="text" name="email"
+                                                <div class="t-input-block"><input type="text" name="Email"
                                                                                   class="t-input js-tilda-rule "
                                                                                   value="" placeholder="E-mail"
-                                                                                  data-tilda-rule="name"
+                                                                                  data-tilda-rule="email"
                                                                                   style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
                                                     <div class="t-input-error"></div>
                                                 </div>
                                             </div>
                                             <div class="t-input-group t-input-group_nm" data-input-lid="1495646545048">
-                                                <div class="t-input-block"><input type="text" name="pass"
+                                                <div class="t-input-block"><input type="text" name="Name"
                                                                                   class="t-input js-tilda-rule "
-                                                                                  value="" placeholder="Password"
+                                                                                  value="" placeholder="First name"
                                                                                   data-tilda-rule="name"
                                                                                   style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
                                                     <div class="t-input-error"></div>
                                                 </div>
                                             </div>
                                             <div class="t-input-group t-input-group_nm" data-input-lid="1495646567135">
-                                                <div class="t-input-block"><input type="text" name="firstName"
+                                                <div class="t-input-block"><input type="text" name="Name_2"
                                                                                   class="t-input js-tilda-rule "
-                                                                                  value="" placeholder="First Name"
+                                                                                  value="" placeholder="Last name"
                                                                                   data-tilda-rule="name"
                                                                                   style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
                                                     <div class="t-input-error"></div>
                                                 </div>
                                             </div>
                                             <div class="t-input-group t-input-group_nm" data-input-lid="1580232136893">
-                                                <div class="t-input-block"><input type="text" name="lastName"
+                                                <div class="t-input-block"><input type="text" name="Name_3"
                                                                                   class="t-input js-tilda-rule "
-                                                                                  value="" placeholder="Last Name"
+                                                                                  value="" placeholder="Password"
                                                                                   data-tilda-rule="name"
                                                                                   style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
                                                     <div class="t-input-error"></div>
@@ -216,7 +214,6 @@
                                                                                                          tabindex="-1">
                                         </div>
                                     </form>
-
                                     <style>#rec158142307 input::-webkit-input-placeholder {
                                         color: #000000;
                                         opacity: 0.5;
@@ -257,54 +254,69 @@
                                         opacity: 0.5;
                                     }</style>
                                 </div>
-
-                                <head>
-                                    <meta name="viewport" content="width=device-width, initial-scale=1">
-                                    <link rel="stylesheet"
-                                          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-                                          type="text/css">
-                                    <meta charset="utf-8">
-                                    <title>Login</title>
-
-                                    <style>
-                                        .col-centered {
-                                            float: none;
-                                            margin: 0 auto;
-                                        }
-                                    </style>
-                                </head>
-                                <div class="col-xs-12 col-sm-8 col-md-4 col-lg-4 col-centered">
-                                    <form action="login" method="post">
-                                        <div class="form-group">
-                                            <input name="email" type="text" class="form-control"
-                                                   placeholder="Enter email">
-
-                                        </div>
-                                        <div class="form-group">
-                                            <input name="pass" type="text" class="form-control"
-                                                   placeholder="Enter password">
-                                        </div>
-                                        <button type="submit" class="btn-primary form-control">Login
-                                        </button>
-                                    </form>
+                                <div class="t698__form-bottom-text t-text t-text_xs" field="text">You agree with our
+                                    Terms and Conditions
                                 </div>
                             </div>
-                        </div>
-
-                        <div class="t698__form-bottom-text t-text t-text_xs" field="text">You agree with our
-
-                            Terms and Conditions
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script type="text/javascript"> $('#rec158142307').find('.js-form-proccess').on('tildaform:aftererror', function (e) {
+            e.preventDefault();
+            t698_fixcontentheight('158142307');
+        });
+        $('.t698').bind('displayChanged', function () {
+            t698_fixcontentheight('158142307');
+        }); </script>
+        <style>#rec158142307 .t-btn[data-btneffects-first],
+        #rec158142307 .t-btn[data-btneffects-second],
+        #rec158142307 .t-submit[data-btneffects-first],
+        #rec158142307 .t-submit[data-btneffects-second] {
+            position: relative;
+            overflow: hidden;
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+        }</style>
+        <script type="text/javascript">$(document).ready(function () {
+        });</script>
     </div>
-</div>
-
-
+</div><!--/allrecords--><!-- Tilda copyright. Don't remove this line -->
+<div class="t-tildalabel t-tildalabel-free" id="tildacopy" data-tilda-sign="2013748#9170545">
+    <div class="t-tildalabel-free__main"><a href="https://tilda.cc/?upm=2013748" target="_blank"
+                                            style="padding-bottom:12px; display: block;"><img style="width:40px;"
+                                                                                              src="https://static.tildacdn.com/img/tildacopy.png"></a>
+        <div style="padding-bottom: 15px;">This site was made on <a href="https://tilda.cc/?upm=2013748" target="_blank"
+                                                                    style="text-decoration: none; color:inherit;">Tilda
+            — a website builder</a> that helps to&nbsp;create a&nbsp;website without any code
+        </div>
+        <a href="https://tilda.cc/registration/" target="_blank"
+           style="display: inline-block; padding: 10px 20px; font-size: 13px; border-radius: 50px; background-color: #fff; color:#000; text-decoration: none;">Create
+            a website</a></div>
+    <div class="t-tildalabel-free__links-wr"><a class="t-tildalabel-free__txt-link"
+                                                href="http://help.tilda.ws/white-label" target="_blank">How to remove
+        this block?</a><a class="t-tildalabel-free__txt-link" href="https://tilda.cc/?upm=2013748" target="_blank">About
+        platform</a><a class="t-tildalabel-free__txt-link" href="https://tilda.cc/abuse/" target="_blank">Submit a
+        complaint</a></div>
+</div><!-- Stat -->
+<script type="text/javascript">if (!window.mainTracker) {
+    window.mainTracker = 'tilda';
+}
+(function (d, w, k, o, g) {
+    var n = d.getElementsByTagName(o)[0], s = d.createElement(o), f = function () {
+        n.parentNode.insertBefore(s, n);
+    };
+    s.type = "text/javascript";
+    s.async = true;
+    s.key = k;
+    s.id = "tildastatscript";
+    s.src = g;
+    if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+    } else {
+        f();
+    }
+})(document, window, '20eb64804a44566861180e7abc947821', 'script', 'https://stat.tildacdn.com/js/tildasimplestat-0.1.min.js');</script>
 </body>
 </html>
-
-
-
